--- a/hock_bot/pom.xml
+++ b/hock_bot/pom.xml
@@ -47,6 +47,26 @@
 			<version>3.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>ejb</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>ejb-remote</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>cdi</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>jpa</artifactId>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
