--- a/hock_bot/pom.xml
+++ b/hock_bot/pom.xml
@@ -47,6 +47,15 @@
 			<version>3.6</version>
 		</dependency>
 
+
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.wildfly.swarm</groupId>
 			<artifactId>ejb</artifactId>
