--- a/hock_bot/src/main/resources/project-mysql.yaml
+++ b/hock_bot/src/main/resources/project-mysql.yaml
@@ -6,7 +6,7 @@ swarm:
         xa-datasource-class-name: com.mysql.jdbc.jdbc2.optional.MysqlXADataSource
         driver-module-name: com.mysql
     data-sources:
-      ExampleDS:
+      HOCKBOTDS:
         driver-name: com.mysql
         connection-url: jdbc:mysql://localhost:3306/hock_bot
         user-name: hockbotadmin
