--- a/hock_bot/pom.xml
+++ b/hock_bot/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>jaxrs</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wildfly.swarm</groupId>
+			<artifactId>datasources</artifactId>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
