--- a/hock_bot/pom.xml
+++ b/hock_bot/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.6</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>fluent-hc</artifactId>
+		    <version>4.5.3</version>
+		</dependency>
 
 
 		<dependency>
