--- a/hock_bot/.gitignore
+++ b/hock_bot/.gitignore
@@ -6,4 +6,9 @@
 ../.DS_Store
 ../conference
 ../hellojpa
+../.DS_Store
+../conference/
+../hellojpa/
+../stripes-lessons-001/
+../stripes-lessons-002/
 
