--- a/hock_bot/src/main/resources/project-stages.yaml
+++ b/hock_bot/src/main/resources/project-stages.yaml
@@ -10,4 +10,4 @@ swarm:
         driver-name: com.mysql
         connection-url: jdbc:mysql://localhost:3306/hock_bot
         user-name: root
-        password: JJZCwN1CFTlw1YvM
+        password: 
